endpoints: get listing detail
