# routes/listings.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/kayprogrammer/bidout-auction-v7/models"
 	"github.com/kayprogrammer/bidout-auction-v7/schemas"
+	"github.com/kayprogrammer/bidout-auction-v7/utils"
 	"gorm.io/gorm"
 	"gorm.io/gorm/clause"
 	"github.com/satori/go.uuid"
@@ -22,7 +23,7 @@ func GetListings(c *fiber.Ctx) error {
 	client := GetClient(c)
 	listings := []models.Listing{}
 	quantity := c.QueryInt("quantity")
-	// Get reviews
+	// Get listings
 	db.Preload(clause.Associations).Order("created_at DESC").Find(&listings)
 
 	// Initialize each listing object in the slice
@@ -42,6 +43,36 @@ func GetListings(c *fiber.Ctx) error {
 	response := schemas.ListingsResponseSchemas{
 		ResponseSchema: schemas.ResponseSchema{Message: "Listings fetched"}.Init(),
 		Data:           listings,
+	}
+	return c.Status(200).JSON(response)
+}
+
+// @Summary Retrieve listing's detail
+// @Description This endpoint retrieves detail of a listing.
+// @Tags Listings
+// @Param slug path string true  "Listing Slug"
+// @Success 200 {object} schemas.ListingDetailResponseSchema
+// @Router /api/v7/listings/detail/{slug} [get]
+func GetListing(c *fiber.Ctx) error {
+	db := c.Locals("db").(*gorm.DB)
+	listing := models.Listing{}
+	slug := c.Params("slug")
+
+	// Get listing
+	db.Preload(clause.Associations).Find(&listing,"slug = ?", slug)
+	if listing.ID == uuid.Nil {
+		return c.Status(404).JSON(utils.ErrorResponse{Message: "Listing does not exist!"}.Init())
+	}
+	listing = listing.Init(db)
+	relatedListings := []models.Listing{}
+	db.Preload(clause.Associations).Order("created_at DESC").Where("category_id = ?", listing.CategoryId).Not("id = ?", listing.ID).Find(&relatedListings)
+
+	response := schemas.ListingDetailResponseSchema{
+		ResponseSchema: schemas.ResponseSchema{Message: "Listing details fetched"}.Init(),
+		Data:           schemas.ListingDetailResponseDataSchema{
+			Listing:			listing,
+			RelatedListings:	relatedListings,
+		},
 	}
 	return c.Status(200).JSON(response)
 }
