# schemas/listings.go
@@ -10,3 +10,13 @@ type ListingsResponseSchemas struct {
 	ResponseSchema
 	Data					[]models.Listing	`json:"data"`
 }
+
+type ListingDetailResponseDataSchema struct {
+	Listing					models.Listing		`json:"listing"`
+	RelatedListings			[]models.Listing	`json:"related_listings"`
+}
+
+type ListingDetailResponseSchema struct {
+	ResponseSchema
+	Data					ListingDetailResponseDataSchema		`json:"data"`
+}
